[gd_scene load_steps=4 format=3 uid="uid://bgjhgbgk5lff8"]

[ext_resource type="Theme" uid="uid://c55lhrkiw4ysq" path="res://7.UI/Theme/AzyrTheme.tres" id="1_fmof0"]
[ext_resource type="StyleBox" uid="uid://crpci47t7tqbd" path="res://7.UI/Theme/panel_plat_black.tres" id="2_f7fdy"]
[ext_resource type="Script" uid="uid://c5jby6pa5hqxx" path="res://7.UI/GUI/1.StartScreen/start_screen_gui.gd" id="2_wyoph"]

[node name="StartScreenGUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fmof0")
script = ExtResource("2_wyoph")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_f7fdy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fmof0")

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_fmof0")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme = ExtResource("1_fmof0")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_fmof0")
theme_override_font_sizes/font_size = 48
text = "OVERKILL"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_neighbor_top = NodePath("../ExitGameButton")
theme = ExtResource("1_fmof0")
text = "Play
"

[node name="SettingButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme = ExtResource("1_fmof0")
text = "Setting
"

[node name="CreaditButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme = ExtResource("1_fmof0")
text = "Credit
"

[node name="ExitGameButton" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("1_fmof0")
text = "Exit Game"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_fmof0")

[connection signal="button_up" from="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer/SettingButton" to="." method="_on_setting_button_button_up"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer/CreaditButton" to="." method="_on_creadit_button_pressed"]
[connection signal="button_up" from="VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/GridContainer/ExitGameButton" to="." method="_on_exit_game_button_button_up"]
